--- a/day 13/spamorham.py.ipynb
+++ b/day 13/spamorham.py.ipynb
@@ -318,6 +318,79 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from __future__ import print_function, division\n",
+    "import nltk\n",
+    "import os\n",
+    "import random\n",
+    "from collections import Counter\n",
+    "from nltk import word_tokenize, WordNetLemmatizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import NaiveBayesClassifier, classify\n",
+    "\n",
+    "stoplist = stopwords.words('english')\n",
+    "\n",
+    "def init_lists(folder):\n",
+    "    a_list = []\n",
+    "    file_list = os.listdir(folder)\n",
+    "    for a_file in file_list:\n",
+    "        f = open(folder + a_file, 'rb')\n",
+    "        a_list.append(f.read())\n",
+    "    f.close()\n",
+    "    return a_list\n",
+    "\n",
+    "def preprocess(sentence):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    return [lemmatizer.lemmatize(word.lower()) for word in word_tokenize(sentence)]\n",
+    "\n",
+    "def get_features(text, setting):\n",
+    "    if setting=='bow':\n",
+    "        return {word: count for word, count in Counter(preprocess(text)).items() if not word in stoplist}\n",
+    "    else:\n",
+    "        return {word: True for word in preprocess(text) if not word in stoplist}\n",
+    "\n",
+    "def train(features, samples_proportion):\n",
+    "    train_size = int(len(features) * samples_proportion)\n",
+    "    # initialise the training and test sets\n",
+    "    train_set, test_set = features[:train_size], features[train_size:]\n",
+    "    print ('Training set size = ' + str(len(train_set)) + ' emails')\n",
+    "    print ('Test set size = ' + str(len(test_set)) + ' emails')\n",
+    "    # train the classifier\n",
+    "    classifier = NaiveBayesClassifier.train(train_set)\n",
+    "    return train_set, test_set, classifier\n",
+    "\n",
+    "def evaluate(train_set, test_set, classifier):\n",
+    "    # check how the classifier performs on the training and test sets\n",
+    "    print ('Accuracy on the training set = ' + str(classify.accuracy(classifier, train_set)))\n",
+    "    print ('Accuracy of the test set = ' + str(classify.accuracy(classifier, test_set)))\n",
+    "    # check which words are most informative for the classifier\n",
+    "    classifier.show_most_informative_features(20)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # initialise the data\n",
+    "    spam = init_lists('enron1/spam/')\n",
+    "    ham = init_lists('enron1/ham/')\n",
+    "    all_emails = [(email, 'spam') for email in spam]\n",
+    "    all_emails += [(email, 'ham') for email in ham]\n",
+    "    random.shuffle(all_emails)\n",
+    "    print ('Corpus size = ' + str(len(all_emails)) + ' emails')\n",
+    "\n",
+    "    # extract the features\n",
+    "    all_features = [(get_features(email, ''), label) for (email, label) in all_emails]\n",
+    "    print ('Collected ' + str(len(all_features)) + ' feature sets')\n",
+    "\n",
+    "    # train the classifier\n",
+    "    train_set, test_set, classifier = train(all_features, 0.8)\n",
+    "\n",
+    "    # evaluate its performance\n",
+    "    evaluate(train_set, test_set, classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
