--- a/day 20/IntroToDataScience.ipynb
+++ b/day 20/IntroToDataScience.ipynb
@@ -452,6 +452,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {8.7: [83000],\n",
+       "             8.1: [88000],\n",
+       "             0.7: [48000],\n",
+       "             6: [76000],\n",
+       "             6.5: [69000],\n",
+       "             7.5: [76000],\n",
+       "             2.5: [60000],\n",
+       "             10: [83000],\n",
+       "             1.9: [48000],\n",
+       "             4.2: [63000]})"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#key : years, values : list of salaries for each tenure\n",
+    "\n",
+    "salary_by_tenure = defaultdict(list)\n",
+    "\n",
+    "for salary, tenure in salaries_and_tenures:\n",
+    "    salary_by_tenure[tenure].append(salary)\n",
+    "    \n",
+    "salary_by_tenure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{8.7: 83000.0,\n",
+       " 8.1: 88000.0,\n",
+       " 0.7: 48000.0,\n",
+       " 6: 76000.0,\n",
+       " 6.5: 69000.0,\n",
+       " 7.5: 76000.0,\n",
+       " 2.5: 60000.0,\n",
+       " 10: 83000.0,\n",
+       " 1.9: 48000.0,\n",
+       " 4.2: 63000.0}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#keys  : years, each value : average salary for that tenure\n",
+    "average_salary_by_tenure = {\n",
+    "    tenure: sum(salaries) / len(salaries)\n",
+    "    for tenure, salaries in salary_by_tenure.items()\n",
+    "}\n",
+    "\n",
+    "average_salary_by_tenure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bucket the tenures\n",
+    "\n",
+    "def tenure_bucket(tenure):\n",
+    "    if tenure < 2:\n",
+    "        return 'less than two'\n",
+    "    elif tenure < 5:\n",
+    "        return 'between two and five'\n",
+    "    else:\n",
+    "        return 'more than five'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#group together salaries corresponding to each bucket\n",
+    "#key : tenure bucket, values: list of salaries for that bucket\n",
+    "\n",
+    "salary_by_tenure_bucket = defaultdict(list)\n",
+    "\n",
+    "for salary, tenure in salaries_and_tenures:\n",
+    "    bucket = tenure_bucket(tenure)\n",
+    "    salary_by_tenure_bucket[bucket].append(salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'more than five': [83000, 88000, 76000, 69000, 76000, 83000],\n",
+       "             'less than two': [48000, 48000],\n",
+       "             'between two and five': [60000, 63000]})"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary_by_tenure_bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#average salary for each group\n",
+    "#key: tenure buckets, values: average salary\n",
+    "\n",
+    "average_salary_by_bucket = {\n",
+    "tenure_bucket : sum(salaries) / len(salaries)\n",
+    "for tenure_bucket, salaries in salary_by_tenure_bucket.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'more than five': 79166.66666666667,\n",
+       " 'less than two': 48000.0,\n",
+       " 'between two and five': 61500.0}"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_salary_by_bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
